[tool.poetry]
name = "hautils"
version = "0.0.0"
description = "Home Assistant Utilities integration for Home Assistant"
authors = ["Aidan Timson <aidan@timmo.dev>"]
maintainers = ["Aidan Timson <aidan@timmo.dev>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/timmo001/homeassistant-integration-hautils"
repository = "https://github.com/timmo001/homeassistant-integration-hautils"
documentation = "https://github.com/timmo001/homeassistant-integration-hautils"
classifiers = [
  "Natural Language :: English",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
]
packages = []

[tool.poetry.dependencies]
python = "^3.12"
homeassistant = "^2023.6"

[tool.poetry.group.dev.dependencies]
hass-nabucasa = "0.67.1"
pylint = "3.2.4"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/timmo001/homeassistant-integration-hautils/issues"
Changelog = "https://github.com/timmo001/homeassistant-integration-hautils/releases"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# format - handled by black
# duplicate-code - unavoidable
# used-before-assignment - false positives with TYPE_CHECKING structures
disable = [
    "duplicate-code",
    "format",
    "too-many-ancestors",
    "too-many-instance-attributes",
    "used-before-assignment",
]
